Material 3 and Customization

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,5 +3,6 @@
     "cmake.sourceDirectory": "${workspaceFolder}/linux",
     "editor.codeActionsOnSave": {
         "source.fixAll": true
-    }
+    },
+    "C_Cpp.errorSquiggles": "enabled"
 }
