--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   local_auth: ^2.1.6
+  video_player: ^2.6.0
 
 dev_dependencies:
   flutter_test:
