--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,6 +1,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.fingerprint_flutter_app">
-
+    
+    <uses-permission android:name="android.permission.INTERNET"/>
+   
    <application
         android:label="fingerprint_flutter_app"
         android:name="${applicationName}"
